# axum-template

./: .env  Cargo.toml  READMD.md  README.md  rustfmt.toml
src/: lib.rs  main.rs
src/auth/: login.rs  logout.rs  mod.rs
src/conversation/: dto.rs  mod.rs  service.rs
src/core/: api_err.rs  api_ok.rs  config.rs  controller.rs  date_format.rs  db.rs  jwt.rs  mod.rs
src/crawler/: bing.rs  google.rs  mod.rs  qichacha.rs  tianyancha.rs
src/entity/: context.rs  messages.rs  mod.rs  permissions.rs  prelude.rs  role_permissions.rs  roles.rs  sessions.rs  user_roles.rs  users.rs
src/extract/: claims.rs  mod.rs  passthrough.rs  user.rs
src/index/: login.rs  mod.rs
src/middleware/: mod.rs  role.rs  token.rs
src/session/: dto.rs  mod.rs  service.rs
src/user/: dto.rs  mod.rs  service.rs
