[package]
name = "axum-template"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/bin/main.rs"

[dependencies]
axum = "0.7.7"
axum-extra = { version = "0.9.4", features = ["typed-header"] }
chrono = "0.4.38"
dotenv = "0.15.0"
jsonwebtoken = "9.3.0"
sea-orm = { version = "1.1.0", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
serde = { version = "1.0.213", features = ["derive"] }
thiserror = "1.0.67"
tokio = { version = "1.41.0", features = ["full"] }
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[profile.release]
opt-level = "z"
lto = true
debug = false
codegen-units = 1
panic = "abort"
